--- a/public/gathering.html
+++ b/public/gathering.html
@@ -271,7 +271,7 @@
                         <span class="fa fa-star-o" style="font-size:36px; color: gold;"></span>
                         <span class="fa fa-star-o" style="font-size:36px; color: gold;"></span>
                     </div>
-                    <p class="text-muted" style="text-align: center;">目前尚未有人給評分</p>
+                    <p id="rating-description" class="text-muted" style="text-align: center;">目前尚未有人給評分</p>
                     <h4 id="rating-value">
                         </h1>
                 </div>
@@ -368,6 +368,8 @@
                     })
 
                 })
+
+
 
 
 
@@ -831,6 +833,55 @@
 
 
                 statusCode
+
+
+
+
+
+
+                // -------------------------- current rating ---------------------
+
+
+
+
+                let ratingScore = parseFloat(getgatheringDetails.data[0].avg_rating).toFixed(2)
+                // let ratingScore = 3.51
+
+
+
+                if (ratingScore == 0) {
+                    document.getElementById('rating-description').textContent = '目前尚未有人給評分'
+                } else {
+                    document.getElementById('rating-description').textContent = `${ratingScore} / 5`
+                }
+
+
+
+                const stars = document.querySelector(".ratingResult").children;
+                // let ratingValue
+                let index //目前選到的星星
+
+                for (let j = 0; j < stars.length; j++) {
+                    stars[j].classList.remove("fa-star")//reset 所有星星
+                    stars[j].classList.add("fa-star-o")
+                }
+                for (let j = 0; j < ratingScore - 0.5; j++) {
+                    stars[j].classList.remove("fa-star-o")
+                    stars[j].classList.add("fa-star")
+                }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1628,7 +1679,9 @@
     </script>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly" async></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmXJHj0WUd8Zy-neXlew88hmIkB4bnwI&callback=initMap&v=weekly"
+        async></script>
 
 
 
